[WOR-1551] TDR cannot deserialize Rawls workspace responses (#1609)